🚧  Rename page header component to page, refactor about and submit

--- a/templates/submit.twig
+++ b/templates/submit.twig
@@ -1,8 +1,8 @@
 {% extends '_layout' %}
 
 {% block content %}
-  <div class="submit">
-    <h1 class="submit__title">Got something to share? Let us know.</h1>
+  <div class="page">
+    <h1 class="page__heading">Got something to share? Let us know.</h1>
 
     {% macro errorList(errors) %}
       {% if errors %}
