--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -37,6 +37,10 @@
       {% include '_components/modal/index.twig' %}
     </template>
 
+    <template data-card-template>
+      {% include '_components/card/index.twig' %}
+    </template>
+
     <script src="/dist/vendor.js"></script>
     <script src="/dist/bundle.js"></script>
   <body>
