--- a/templates/search.twig
+++ b/templates/search.twig
@@ -8,16 +8,20 @@
     .all()
   %}
 
-  {% if crawls|length > 0 %}
-    {% include '_components/page-header/index.twig' with {
-      title: 'Searching for "' ~ craft.request.getQuery('q') ~ '"'
-    } %}
-    {% include '_components/grid/index.twig' with {
-      cards: crawls 
-    } %}
-  {% else %}
-    {% include '_components/page-header/index.twig' with {
-      title: 'No results'
-    } %}
-  {% endif %}
+  <div class="page">
+    {% if crawls|length > 0 %}
+      <h1 class="page__heading page__heading--margin">
+        Searching for "{{craft.request.getQuery('q')}}"
+      </h1>
+      {% include '_components/grid/index.twig' with {
+        cards: crawls 
+      } %}
+    {% else %}
+      <div class="page__content">
+        {% include '_components/page-header/index.twig' with {
+          title: 'No results'
+        } %}
+      </div>
+    {% endif %}
+  </div>
 {% endblock %}
