--- a/templates/submit.twig
+++ b/templates/submit.twig
@@ -4,6 +4,12 @@
   <div class="page">
     <h1 class="page__heading">Got something to share? Let us know.</h1>
 
+    <div class="page__content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Praesent eleifend aliquet orci, a congue lacus tristique aliquet. 
+      Curabitur ac scelerisque sapien, nec finibus erat.</p>
+    </div>
+
     {% macro errorList(errors) %}
       {% if errors %}
           <ul class="errors">
