--- a/components/submit/styles.css
+++ b/components/submit/styles.css
@@ -1,4 +1,12 @@
 .submit__form {
-  margin-top: 40px;
-  width: 50%;
+  margin-top: 25px;
+  width: 100%;
+
+  @media (--medium-screen) {
+    width: 80%;
+  }
+
+  @media (--large-screen) {
+    width: 60%;
+  }
 }
