--- a/templates/newsletter.twig
+++ b/templates/newsletter.twig
@@ -11,7 +11,7 @@
     </div>
 
     <div class="page__content">
-      <form class="submit__form" method="post" action="" accept-charset="UTF-8">
+      <form class="form" data-mailchimp-form accept-charset="UTF-8">
         <div class="input" data-input>
           <label class="input__label" for="from-name">Your Email</label>
           <input class="input__field {% if message is defined and message %} input__field--error {% endif %}" data-input-field required id="from-name" type="email" name="fromName" value="{{ message.fromName ?? '' }}">
