--- a/components/logo/styles.css
+++ b/components/logo/styles.css
@@ -1,16 +1,26 @@
 .logo {
   margin: 0 auto;
   max-width: 145px;
-  transform: translateZ(0);
+  transform: translateY(-50px);
   transition: 0.3s;
   width: 100%;
 }
 
-.logo:hover {
-  transform: scale(1.03);
+.logo__link {
+  display: block;
 }
 
-.logo__title {
-  display: block;
-  text-indent: -99999px;
+.logo__svg {
+  width: 100%;
+  height: 102px;
+  pointer-events: none;
+}
+
+.logo__line {
+  display: none;
+  opacity: 0;
+
+  @media (--medium-screen) {
+    display: block;
+  }
 }
