💬  Update submit page copy

--- a/templates/submit.twig
+++ b/templates/submit.twig
@@ -5,9 +5,10 @@
     <h1 class="page__heading">Got something to share? Let us know.</h1>
 
     <div class="page__content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-      Praesent eleifend aliquet orci, a congue lacus tristique aliquet. 
-      Curabitur ac scelerisque sapien, nec finibus erat.</p>
+      <p>
+        Created something awesome with WebAudio? Found something interesting 
+        on the interwebs? Let us know and we'll feature it in our showcase.
+      </p>
     </div>
 
     {% macro errorList(errors) %}
