--- a/components/modal/index.twig
+++ b/components/modal/index.twig
@@ -21,7 +21,7 @@
         <img 
           class="modal__img" 
           data-image 
-          {% if data is defined %}src="{{ data.image.first().url }}"{% endif %} />
+          {% if data is defined %}src="{{ data.image.first().getUrl('crawlsTransform') }}"{% endif %} />
         <div class="modal__body {% if data is defined and data.description == '' %} is-hidden {% endif %}">
           <h3 class="modal__subtitle">About this Crawl</h3>
           <div data-description>
