🚧  Only show load more button if more entries available

--- a/components/grid/index.twig
+++ b/components/grid/index.twig
@@ -27,10 +27,12 @@
     {% endif %}
   </section>
 
+  {% if cards is defined and cards.total() > 18 %}
   <a 
     class="listing__load-more button button--secondary button--large" 
     data-load-more 
     href="#">
     Load more
   </a>
+  {% endif %}
 </div>
