✨  New about page

--- a/templates/about.twig
+++ b/templates/about.twig
@@ -5,25 +5,16 @@
     <h1 class="page__heading">About AudioCrawl</h1>
 
     <div class="page__content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-      Praesent eleifend aliquet orci, a congue lacus tristique aliquet. 
-      Curabitur ac scelerisque sapien, nec finibus erat. Vestibulum nec 
-      mauris ullamcorper, blandit massa ut, sollicitudin ipsum. Vestibulum 
-      dapibus euismod suscipit. Maecenas et placerat quam, ac bibendum eros. 
-      Etiam at leo et mi lacinia dictum. Ut sagittis est a libero pellentesque, 
-      vitae dapibus elit ullamcorper. Nulla ullamcorper sem nec odio tempus imperdiet. 
-      Curabitur ut purus erat. Nullam et tortor eu urna venenatis euismod a at ipsum. 
-      Fusce at bibendum enim. Vivamus turpis enim, hendrerit at dolor et, condimentum 
-      tristique leo. Nulla fermentum hendrerit tortor vitae mattis. Integer vel lorem ex.<p>
+      <p>AudioCrawl was born out of the passion for creative technology instilled 
+      in Digital Surgeons, fueled by CEO Pete Sena, fused with the musical and 
+      audio engineering background of Adam Chambers, Head of Technology. The pairs 
+      passion for creative technology, music, and immersive digital experiences 
+      pushed them to create a repository showcasing best-in-class WebAudio 
+      from around the web.</p>
 
-      <p>Cras a efficitur felis. Cras mattis risus placerat, accumsan ligula a, dapibus 
-      eros. Vestibulum dictum congue mi id rutrum. Integer rutrum iaculis neque, in 
-      rutrum felis tristique vitae. Vestibulum ut orci massa. Ut molestie mattis elit, 
-      tincidunt gravida massa faucibus vitae. Nullam augue nulla, sagittis eget 
-      condimentum et, venenatis vel orci. Fusce tempor et nibh in aliquet. Aenean in 
-      dolor at diam sollicitudin semper. Aenean eleifend libero ligula, quis vehicula 
-      dui mollis vel. Nullam dignissim, velit non sollicitudin rhoncus, dui lectus 
-      pretium eros, at dignissim sapien justo et ex.</p>
+      <p>If you’re interested in learning more about <a href="https://www.digitalsurgeons.com/">Digital Surgeons</a> 
+      and their creative skills then <a href="https://www.digitalsurgeons.com/contact/">reach out</a>, 
+      they’d love to geek out.</p>
     </div>
   </div>
 {% endblock %}
