--- a/components/page/styles.css
+++ b/components/page/styles.css
@@ -23,3 +23,13 @@
   line-height: 1.5;
   margin: 30px 0;
 }
+
+.page__content a {
+  border-bottom: solid 1px var(--blue);
+  color: var(--blue);
+  transition: 0.3s;
+}
+
+.page__content a:hover {
+  border-color: transparent;
+}
