📱 Responsive fixes for listing load more button

--- a/components/listing/styles.css
+++ b/components/listing/styles.css
@@ -5,5 +5,8 @@
 .listing__load-more {
   display: block;
   margin: 0 auto;
-  width: calc(33.3333% - 20px);
+
+  @media (--small-screen) {
+    max-width: 235px;
+  }
 }
