🚧  Add target blank to social / DS link

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -29,7 +29,7 @@
         
         <p class="layout__sidebar-credit">
           Made with ❤️ at
-          <a class="layout__sidebar-credit-link" href="https://www.digitalsurgeons.com">
+          <a class="layout__sidebar-credit-link" href="https://www.digitalsurgeons.com" target="_blank">
             Digital Surgeons
           </a>
         </p>
