--- a/components/nav/index.twig
+++ b/components/nav/index.twig
@@ -45,7 +45,7 @@
       </a>
     </li>
     <li class="nav__social-item">
-      <a class="nav__social-link" href="https://www.facebook.com/audiocrawl">
+      <a class="nav__social-link" href="https://www.facebook.com/audiocrawl" target="_blank">
         <svg class="nav__social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="14" height="14">
           <title>AudioCrawl Facebook</title>
           <path d="M24.92437,62V36H16V24h8.92437v-8.38004C24.92437,6.49153,30.70333,2,38.84651,2 c3.90067,0,7.25309,0.29041,8.23008,0.42022v9.53975l-5.64773,0.00257C37.00014,11.96253,36,14.06699,36,17.15515V24h12l-4,12h-8v26 H24.92437z"/></g>
