📱  Responsive fixes for banner

--- a/components/banner/styles.css
+++ b/components/banner/styles.css
@@ -5,9 +5,13 @@
   padding: 10px 20px;
   position: absolute;
   text-align: center;
-  transform: translateY(-40px);
+  transform: translateY(-80px);
   width: 100%;
   z-index: 999;
+
+  @media (--medium-screen) {
+    transform: translateY(-40px);
+  }
 }
 
 .banner--visible {
