--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -23,6 +23,7 @@
   background: var(--white);
   box-shadow: 0px 39px 64px 0px rgba(25, 38, 45, 0.22);
   display: none;
+  height: 100vh;
   margin: 0 auto;
   max-width: 1180px;
   opacity: 0;
@@ -33,6 +34,7 @@
   z-index: 2;
 
   @media (--medium-screen) {
+    height: auto;
     padding: 50px 70px;
   }
 }
