--- a/components/newsletter/index.twig
+++ b/components/newsletter/index.twig
@@ -1,4 +1,4 @@
-<form class="form" data-newsletter>
+<form class="form {% if inline %}form--inline{% endif %}" data-newsletter>
   <div class="input" data-input>
     <label class="input__label" for="email">Your Email</label>
     <input class="input__field" data-input-field data-email required id="email" type="email" name="EMAIL">
