--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -42,6 +42,10 @@
         {% block content %}{% endblock %}
       </div>
     </main>
+
+    <template data-exit-intent-template>
+      {% include '_components/exit-intent/index.twig' %}
+    </template>
     
     <template data-modal-template>
       {% include '_components/modal/index.twig' %}
