💄  Add form--center modifier for use in exit intent modal

--- a/components/exit-intent/index.twig
+++ b/components/exit-intent/index.twig
@@ -21,10 +21,9 @@
       best in WebAudio straight to your inbox once a month. Only 
       best-in-class WebAudio, we don't spam!
     </p>
-    <div class="exit-intent__form">
-      {% include '_components/newsletter/index.twig' with {
-        inline: true
-      } %}
-    </div>
+    {% include '_components/newsletter/index.twig' with {
+      inline: true,
+      center: true
+    } %}
   </div>
 </div>
