--- a/components/form/styles.css
+++ b/components/form/styles.css
@@ -43,3 +43,10 @@
     background: var(--blue);
   }
 }
+
+.form--center {
+  display: flex;
+  justify-content: center;
+  margin: 40px auto 0;
+  text-align: center;
+}
